# Todome

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.claude/commands/: check.md  component.md  db-migrate.md  deploy-check.md  dev.md  fix.md  review.md
.claude/memory/: session-log.md
.claude/state/: harness-usage.json  session-skills-used.json  session.json  skills-decision.json  tooling-policy.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.local.example  CLAUDE.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: CLAUDE.md  manifest.json  sw.js
apps/web/scripts/: CLAUDE.md  build-tauri.mjs
apps/web/src/: middleware.ts
backend/: CLAUDE.md
scripts/: CLAUDE.md  gas-email-relay.js  generate-vapid-keys.mjs
supabase/: setup-cron.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_enable_realtime.sql  003_event_note_ids.sql  004_diaries.sql  005_calendar_subscriptions.sql  006_shared_calendars.sql  007_fix_shared_calendar_rls.sql  008_member_display_names.sql  009_todo_lists.sql  010_push_notifications.sql  011_storage_attachments.sql  012_note_lock.sql  013_drop_push_subscriptions.sql  014_email_reminders_setting.sql  015_webauthn_credential.sql  CLAUDE.md
(+152 files in other folders)
