[package]
name = "todome"
version = "0.1.0"
description = "Personal notes, todos, and calendar"
authors = []
edition = "2021"

[[bin]]
name = "todome"
path = "src/main.rs"

[lib]
name = "todome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
